# llm-saia

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: INTRO.md  backend.md  custom-verbs.md  production.md
docs/demo/: demo.tape
examples/: __init__.py  agent.py  analyze.py  build.py  build_multi.py  compose_example.py  investigate.py  openclaw_example.py  scraper.py
llm_saia/: __init__.py  builder.py  saia.py
llm_saia/backends/: __init__.py  _schema.py  anthropic.py  openai.py  openclaw.py
llm_saia/core/: __init__.py  backend.py  classifier.py  config.py  configurable.py  controller.py  errors.py  logger.py  protocols.py  schema.py  trace.py  types.py  verb.py
llm_saia/core/backend/: __init__.py
llm_saia/memory/: __init__.py
llm_saia/verbs/: __init__.py  _base.py  ask.py  choose.py  classify.py  complete.py  confirm.py  constrain.py  critique.py  decompose.py  extract.py  ground.py  instruct.py  memory.py  parse.py  refine.py  synthesize.py  verify.py
tests/: __init__.py
tests/unit/: __init__.py  conftest.py  test_backend.py  test_builder.py  test_errors.py  test_logger.py  test_openclaw.py  test_saia.py  test_schema.py  test_task.py  test_trace.py  test_verbs.py
